--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -3,17 +3,86 @@ article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summ
 html, body, div,  p, h1, h2, h3, h4, h5, h6, dl, dt, dd, ol, ul, li, blockquote, pre, button, fieldset, form, legend,table, caption, tbody, tfoot, thead, tr, th, td, iframe, article, aside, canvas, details, embed, textarea, figure, figcaption, header, footer, main, menu, nav, section, summary, audio, video, template {margin: 0;padding: 0;border: 0;font-size: inherit;font-family: inherit;vertical-align: baseline;box-sizing: border-box;word-break: keep-all;}
 a,a:active,a:hover,a:link,a:visited{text-decoration:none}
 ul, ul>li,ol, ol>li{list-style:none;}
+button {cursor: pointer;}
+.skip {font-size:0; position:absolute; z-index:-999;}
 
-$darkcolor : #222;
+
+$darkcolor : #000;
+$lightcolor : #fff;
+$bordercolor : 1px solid #ddd;
+$bordercolor2 : 1px solid rgba(255,255,255,.1);
+$basicSpace :2rem 0;
+
 
 html {font-size:10px;}
-#header {height:100px; border-bottom:1px solid #000;}
-.layout {width:100%; max-width:124rem; margin:0 auto;}
+i {margin-top:.4rem;}
+.App.light {background:$lightcolor;}
+.App.dark {background:#191919;}
+
+#header {display:flex; justify-content:space-between ; height:7rem;  border-bottom:$bordercolor;
+    .leftUtil {display:flex; height: 100%; align-items:center;}
+    .menu {display:inline-block; width:7rem; text-align:center; font-size:2.5rem; color:$darkcolor;}
+    .menu button {width:100%; height:7rem;background:transparent; transition:all 0.3s; -webkit-transition:all 0.3s;}
+    .logo {display:inline-block;width:10rem;}
+    .logo a {display:block; width:100%;}
+
+    .search {position:relative; align-self:center; width:60rem; height:4rem; border:$bordercolor; 
+        input {width:calc(100% - 4rem);height: 100%; border:none; padding:0 2rem; background: transparent; font-size:1.5rem; color:$darkcolor;}
+        button {position:absolute; right:0; top:0; width:4rem; height:100%; background:#fff; font-size:2rem; cursor:pointer;}
+    }
+
+    .righttUtil {align-self:center; padding-right:2rem;
+        button {margin:0 .5rem; padding:.5rem 1rem; border:$bordercolor; background:transparent; color:$darkcolor; font-size:1.4rem; transition:all 0.3s; -webkit-transition:all 0.3s;}
+        button:hover,button:focus {background:#eee;}
+        button i {margin-right:.3rem;}
+        
+    }
+
+    .fixmenu {position:fixed; left:0; top:0; z-index:10; width:7rem; height:100vh; background:$lightcolor;
+        ul {width:100%;}
+        ul li {width:100%;}
+        button {width:100%; height:7rem;background:$lightcolor; color:$darkcolor; font-size:1.2rem; transition:all 0.3s; -webkit-transition:all 0.3s;}
+        li:not(:first-child) button:hover,
+        li:not(:first-child) button:focus {background:#eee;}
+        button i {font-size:2.5rem; }
+        svg {width:2.4rem;}
+        span {display:block; }
+    }
+}
+.App.dark #header { border-bottom:$bordercolor2;
+    .menu,
+    .menu button {color:$lightcolor;}
+    .search { border:$bordercolor2; 
+        input {color:$lightcolor;}
+        button {background:rgba(255,255,255,.1); color:$lightcolor;}
+    }
+    #youtube-paths path {fill:$lightcolor;}
+    .righttUtil {
+        button {border:$bordercolor2;color:$lightcolor;}
+        button:hover,button:focus {background:rgba(255,255,255,.1);}
+    }
+
+    .fixmenu {background:#191919;
+        button {background:#191919; color:$lightcolor;}
+        li:not(:first-child) button:hover,
+        li:not(:first-child) button:focus {background:rgba(255,255,255,.1);}
+        svg path {fill:$lightcolor; }
+    }
+}
+.layout {width:100%; max-width:140rem; margin:0 auto;}
 .video {
-    padding:2rem;
+    padding:2rem 2rem 2rem 9rem; 
     ul {display:flex; flex-wrap:wrap; margin:0 -1rem;}
     li {width:calc(16.66% - 2rem); margin:0 1rem 2rem;}
+    li a {display:block; width:100%; color:$darkcolor;}
     img {width:100%;}
+    .thumb {position:relative;}
+    .thumb:before {display:block; opacity:0; position:absolute; left:0; top:0; content:''; width:100%; height:100%; background:rgba(0,0,0,.7); transition:all 0.3s; -webkit-transition:all 0.3s;}
+    .thumb span {display:block;opacity:0; position:absolute; left:50%; top:50%; font-size:1.5rem; color:#fff; transform: translate(-50%,-50%); -webkit-transform: translate(-50%,-50%); transition:all 0.3s; -webkit-transition:all 0.3s; }
+    li a:hover .thumb:before,
+    li a:focus .thumb:before,
+    li a:hover .thumb span,
+    li a:focus .thumb span {opacity: 1;}
     .info {height:124px;padding:1rem 1rem 0;}
     strong {display: block;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 2;overflow: hidden;max-height:47px;font-size:1.8rem;text-overflow: ellipsis;white-space: normal;}
     p {opacity:.8;margin:.5rem 0 0; font-size:1.4rem;}
@@ -21,27 +90,80 @@ html {font-size:10px;}
     p span:last-child::before {display:inline-block;opacity:.8; width:3px; height:3px; margin:-0.3rem .8rem 0; border-radius:50%; background:$darkcolor;content:''; vertical-align:middle;}
 }
 
-.detail { display:flex; flex-wrap: wrap; padding:2rem 0;
+.App.dark .video {
+    li a {color:$lightcolor;}
+    p span:last-child::before {background:$lightcolor;}
+}
+
+.detail { display:flex; flex-wrap: wrap; padding:$basicSpace; color:$darkcolor;
     .detail-left {width:calc(100% - 40rem); padding-right:4rem;
         iframe {width:100%; height:48rem;}
-        .info { padding:2rem 0; border-bottom:1px solid #ddd; 
+        .info { padding:$basicSpace; border-bottom:$bordercolor; 
             strong {display: block;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 2;overflow: hidden;max-height:47px; margin:0 0 2rem; font-size:1.8rem;text-overflow: ellipsis;white-space: normal;}
             p {opacity:.8;margin:.5rem 0 0; font-size:1.5rem;}
             p span {display:inline-block; }
             p span:last-child::before {display:inline-block;opacity:.8; width:3px; height:3px; margin:-0.3rem .8rem 0; border-radius:50%; background:$darkcolor;content:''; vertical-align:middle;}
-        
-        }
-        .channel { position:relative; padding:2rem 0 2rem 7rem;  
-            .thumb {overflow:hidden; position:absolute; left:0; top:2rem; width:5rem; height:5rem; border-radius:50%;}
-            .thumb img {width:100%;}
-            strong {display:block; margin:1rem 0 2rem; font-size:1.5rem;}
-            .content.more {overflow:hidden;height:6rem; }
-            .content.moreActive {height:auto;}
-            pre {font-size:1.5rem;}
-            button {opacity:0.5; margin:2rem 0 0; background:none; font-size:1.5rem; cursor: pointer;}
-
         }
     }
     
-    .detail-right {width:40rem; background:red;}
+    .detail-right {width:40rem;}
+}
+
+.App.dark .detail { color:$lightcolor;
+    .detail-left{
+        .info {border-bottom:$bordercolor2;
+            p span:last-child::before {background:$lightcolor;}
+        }
+    }
+
+}
+.channel { position:relative; padding:$basicSpace 2rem 7rem; border-bottom:$bordercolor;  
+    .thumb {overflow:hidden; position:absolute; left:0; top:2rem; width:5rem; height:5rem; border-radius:50%;}
+    .thumb img {width:100%;}
+    strong {display:block; margin:1rem 0 2rem; font-size:1.5rem;}
+    .content.more {overflow:hidden;max-height:6rem; }
+    .content.moreActive {height:auto;}
+    pre {font-size:1.5rem;white-space: pre-wrap; }
+    button {opacity:0.5; margin:$basicSpace 0; background:none; font-size:1.5rem; cursor: pointer;}
+
+}
+.App.dark .channel {border-bottom:$bordercolor2; }
+
+.comment { padding:$basicSpace;
+    .tit {margin:0 0 2rem; font-weight:bold; font-size:1.5rem;}
+    li {position:relative; margin:0 0 4rem; padding-left:6rem;}
+    li img {overflow: hidden; position:absolute;left:0; top:0rem; width:4rem; height:4rem; border-radius:50%;}
+    li strong {display:block; margin:0 0 .5rem; font-size:1.4rem; font-weight:normal;}
+    li strong span {opacity: 0.6; margin-left:.5rem; font-size:1.2rem;}
+    pre {font-size:1.4rem; white-space: pre-wrap; }
+    p {margin:1rem 0 0; font-size:1.4rem;}
+    p i {margin-right:0.5rem;}
+
+}
+
+.videoList {padding:0 0 2rem;
+    li {margin:0 0 2rem;}
+    li a {display:flex; flex-wrap: wrap; color:$darkcolor;}
+    .thumb {position:relative;width:45%;}
+    .thumb img {width:100%;}
+    .thumb:before {display:block; opacity:0; position:absolute; left:0; top:0; content:''; width:100%; height:100%; background:rgba(0,0,0,.7); transition:all 0.3s; -webkit-transition:all 0.3s;}
+    .thumb span {display:block;opacity:0; position:absolute; left:50%; top:50%; font-size:1.3rem; color:#fff; transform: translate(-50%,-50%); -webkit-transform: translate(-50%,-50%); transition:all 0.3s; -webkit-transition:all 0.3s; }
+    li a:hover .thumb:before,
+    li a:focus .thumb:before,
+    li a:hover .thumb span,
+    li a:focus .thumb span {opacity: 1;}
+    .info {width:55%; padding:1rem 0 0 1rem;}
+    .info strong {display: block;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 2;overflow: hidden;max-height:34px;font-size:1.3rem;text-overflow: ellipsis;white-space: normal;}
+    .info p {margin:.5rem 0 0; font-size:1.2rem;}
+}
+
+.btn { width:100%;padding:5rem 0; border-top:$bordercolor; text-align:center;
+    a {display:inline-block; font-size:1.5rem; color:$darkcolor;}
+}
+
+.App.dark .videoList {
+    li a {color:$lightcolor;}
+}
+.App.dark .btn { border-top:$bordercolor2;
+    a {color:$lightcolor;}
 }
