--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,9 +1,9 @@
-*{box-sizing: border-box; line-height:1.3; font-family: '맑은고딕','Malgun Gothic', -apple-system, Arial, sans-serif, AppleGothic, Dotum, arial;}
-article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary {display: block;}
-html, body, div,  p, h1, h2, h3, h4, h5, h6, dl, dt, dd, ol, ul, li, blockquote, pre, button, fieldset, form, legend,table, caption, tbody, tfoot, thead, tr, th, td, iframe, article, aside, canvas, details, embed, textarea, figure, figcaption, header, footer, main, menu, nav, section, summary, audio, video, template {margin: 0;padding: 0;border: 0;font-size: inherit;font-family: inherit;vertical-align: baseline;box-sizing: border-box;word-break: keep-all;}
+*{box-sizing: border-box; line-height:1.3; font-family: 'NanumGothic','맑은고딕','Malgun Gothic', -apple-system, Arial, sans-serif, AppleGothic, Dotum, arial;}
+article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary {display: block;font-family: 'NanumGothic';}
+html, body, div,  p, h1, h2, h3, h4, h5, h6, dl, dt, dd, ol, ul, li, blockquote, pre, button, fieldset, form, legend,table, caption, tbody, tfoot, thead, tr, th, td, iframe, article, aside, canvas, details, embed, textarea, figure, figcaption, header, footer, main, menu, nav, section, summary, audio, video, template {margin: 0;padding: 0;border: 0;font-size: inherit;font-family: inherit;vertical-align: baseline;box-sizing: border-box;word-break: keep-all;font-family: 'NanumGothic';}
 a,a:active,a:hover,a:link,a:visited{text-decoration:none}
 ul, ul>li,ol, ol>li{list-style:none;}
-button {cursor: pointer;}
+button {font-family: 'NanumGothic';cursor: pointer;}
 .skip {font-size:0; position:absolute; z-index:-999;}
 
 
